--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
     <div style="height: 20%"></div>
     <div style="width: 100%; text-align: center;">
-      <p style="font-size: 16px">Echo</p>
-      <p>Pre-seed funded</p>
-      <p>Changing the way you surf the web</p>
+      <h2>Echo</h2>
+      <h3>Pre-seed funded</h3>
+      <h3>Changing the way you surf the web</h3>
     </div>
   </body>
 </html>
