--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <body>
     <div style="height: 20%"></div>
-    <div style="width: 100%; text-align: center;">
-      <h2>Echo</h2>
-      <h3>Pre-seed funded</h3>
-      <h3>Changing the way you surf the web</h3>
+    <div style="width: 100%; text-align: center; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; font-size: 2rem;">
+      <h1>Echo</h1>
+      <p>Pre-seed funded</p>
+      <p>Changing the way you surf the web</p>
     </div>
   </body>
 </html>
